--- a/VRChat/89/1309389.html
+++ b/VRChat/89/1309389.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "k6+PobgYBhmruBzkg5GBx2TPRvFXev5z6cn+A/+ZGjo="></script>
+    "NpU0Kj3Ae5QwHEM2bt0xuPTDwzDMtzGdZvatRPENQno="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ロボトミー社職員素体","description":"”ロボトミー社職員素体”は、ロボトミーコーポレーションに登場するエージェントを模した二次創作3Dモデルです。\nそれは3552の三角ポリゴンをもち、2つのマテリアルから構成されています。\n\nユーザーはLobotomy Corporationの二次創作ガイド(　https://steamcommunity.com/games/568220/announcements/detail/3227268492817347386?l=japanese　)に反しない範囲で自由に3Dモデルを使用できます。","url":"https://booth.pm/ja/items/1309389","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fce813d5-8c96-498a-b62d-ca1be3385d08/i/1309389/53b973ef-476e-483f-8b30-10f651854ad6_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k6+PobgYBhmruBzkg5GBx2TPRvFXev5z6cn+A/+ZGjo="></script>
+    nonce="NpU0Kj3Ae5QwHEM2bt0xuPTDwzDMtzGdZvatRPENQno="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1309389/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               576
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1309389/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               576
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
