--- a/VRChat/50/1308750.html
+++ b/VRChat/50/1308750.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lEeGQbRqy4kt5Q7brmE8eLpwexRugSq/KO6SWdy8qWg="></script>
+    "3D4MkkQa0culcAjm4xqS/gubr3XkiiTOc/sqOKZsGKU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】指輪2 15個セット","description":"溜まったのでまた出します。\nNo,16～No,30の計15個のセット\n\nセット内容\n　README\n　指輪（リング）No．１６～３０\n　指輪見本（JPG）\n\nポリゴンは△224～△1568と少し多め\n例のごとくUV展開は一切しておらず、マテリアルでのみの配色となっております。","url":"https://booth.pm/ja/items/1308750","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b192de80-ab9a-405c-a8c2-559c78ffe3e6/i/1308750/914a0cdc-e9ce-41f2-82d2-f72d400fa68a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lEeGQbRqy4kt5Q7brmE8eLpwexRugSq/KO6SWdy8qWg="></script>
+    nonce="3D4MkkQa0culcAjm4xqS/gubr3XkiiTOc/sqOKZsGKU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1308750/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               183
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1308750/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               183
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
