--- a/VRChat/22/1307622.html
+++ b/VRChat/22/1307622.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+bYrlz7AnmEV5INyYyOSMtOhveqKbxF78l+f41fwAXk="></script>
+    "dr8TAtSXGwMwLHqpQ/1CRj2nj3IrLbV/CYGessvoGeg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パルサーマシンガンPMG-1［VRChat向け3Dモデル］","description":"VRChatでの利用を想定したオリジナル銃器モデルです。\n・4394ポリゴン\n\n・黒、白、赤のテクスチャ3種同梱\n\n・改造可能、再配布等は禁止です。\n　詳細は同梱テキストファイルを参照してください。","url":"https://booth.pm/ja/items/1307622","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bc8b8fd2-fda2-42e6-9da9-7fdd7fe1e4ca/i/1307622/6e7b61bf-77b1-496f-b17d-847fdcd8cfe6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+bYrlz7AnmEV5INyYyOSMtOhveqKbxF78l+f41fwAXk="></script>
+    nonce="dr8TAtSXGwMwLHqpQ/1CRj2nj3IrLbV/CYGessvoGeg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1307622/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              226
+                              227
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1307622/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              226
+                              227
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
