--- a/VRChat/90/1307490.html
+++ b/VRChat/90/1307490.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZqKFGMDPUhJH885LcLyU/PO7X7tMC8jMlm9yAiSbbbw="></script>
+    "iM5dQ9++NwKBc0LX5gh30CBykyCMSW9splbQizc7Sls="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けオリジナル３Dモデル「ヴィルフ」","description":"VRchat向けオリジナル３Dモデル「ヴィルフ」\n犬っぽいオオカミアバターです。\n\n","url":"https://booth.pm/ja/items/1307490","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1500","highPrice":"2400"},"image":"https://booth.pximg.net/c/620x620/7db76cf7-7e72-4f84-ba1d-0ba63d5cdd5b/i/1307490/90de9746-14cc-4bea-b503-0ad8f135b119_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZqKFGMDPUhJH885LcLyU/PO7X7tMC8jMlm9yAiSbbbw="></script>
+    nonce="iM5dQ9++NwKBc0LX5gh30CBykyCMSW9splbQizc7Sls="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1307490/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1307490/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
