--- a/VRChat/12/1307312.html
+++ b/VRChat/12/1307312.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "G/6cYvpF/ELHg4iFY7UwfBPJ060OAguvJt3ASnEZIIQ="></script>
+    "STNQUzL1LKuCwfmwVUDns4eNyJFs6riAxCDSmqQIJEY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スーパーの角で売ってそうな水鉄砲","description":"クソ暑い夏をコイツで圧倒しろ\n\n\n内容物はモデル本体とUVマップだけです。\n\nテクスチャは書いていないので、色の変更はマテリアルの変更だけで可能です\n\n改変の有無を問わず再配布、自作発言を禁止します。その他特に利用規約は設けませんが、当データを用いて生じたいかなる結果に対しても私は責任を負いません。","url":"https://booth.pm/ja/items/1307312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/f7e2c44b-6a34-444a-861a-c7c10759a9b0/i/1307312/bdef2403-8630-4503-9432-963dfc85409c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G/6cYvpF/ELHg4iFY7UwfBPJ060OAguvJt3ASnEZIIQ="></script>
+    nonce="STNQUzL1LKuCwfmwVUDns4eNyJFs6riAxCDSmqQIJEY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1307312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1307312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
